add log-manager server.